# applet-template

./: .gitignore  .pnpmfile.cjs  Cargo.toml  REACTIVE-STATE-MANAGEMENT.md  README.md  STRUCTURE.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
dna/coordinator_zomes/provider/: Cargo.toml
dna/coordinator_zomes/provider/src/: lib.rs
dna/integrity_zomes/provider_integrity/: Cargo.toml
dna/workdir/: dna.yaml
dnas/provider/workdir/: dna.yaml
dnas/provider/zomes/coordinator/provider/: Cargo.toml
dnas/provider/zomes/coordinator/provider/src/: lib.rs
nh-launcher-applet/: .gitignore  package.json  rollup.config.js  tsconfig.json  web-dev-server.config.mjs
nh-launcher-applet/demo/: index.html
nh-launcher-applet/src/: index.ts  provider-applet.ts
nh-launcher-applet/workdir/: dna.yaml
tests/: package.json
tests/src/: index.ts  provider.ts  utils.ts
ui/: .gitignore  index.html  package.json  rollup.config.base.js  rollup.config.js  tsconfig.json  web-dev-server.config.mjs
ui/src/: appletConfig.ts  contexts.ts  create-or-join-nh.ts  index.ts  provider-app-test-harness.ts  provider-app.ts  provider-service.ts  provider-store.ts  types.ts  utils.ts
ui/src/components/: provider-component.ts
ui/src/store/: ProviderStore.ts  package.json
we-applet/: package.json  rollup.config.js  tsconfig.json
we-applet/src/: appletConfig.ts  index.ts  provider-applet.ts  todo-applet.ts
we-applet/workdir/: happ.yaml  web-happ.yaml
workdir/: happ.yaml  web-happ.yaml
workdir/sensemaker-enabled/: happ.yaml
(+6 files in other folders)
