[package]
edition = "2021"
name = "provider"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "provider"

[dependencies]
serde = "=1.0.136"
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
derive_more = "0"
provider_integrity = { path = "../../integrity_zomes/provider_integrity" }

# hdk = {version = "0.0.161", features = ["test_utils"]}
hdk = "=0.1.0-beta-rc.2"
