[package]
edition = "2021"
name = "provider"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "provider"

[dependencies]
serde = { workspace = true }
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
derive_more = "0"
provider_integrity = { workspace = true }

hdk = { workspace = true }
